Feat(Frontend): Add Authentication using gitlab to frontend (WIP)
